--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: java
 jobs:
   include:
     - stage: SonarCloud
+      if: branch=master
       script: ./gradlew sonarqube
 addons:
   sonarcloud:
