--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,13 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	// H2 Database Engine
+	testImplementation "com.h2database:h2:1.4.199"
+
+	// https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core
+	compile group: 'org.hibernate.orm', name: 'hibernate-core', version: '6.0.0.Alpha3'
+
+
 }
 
 test {
