--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+#-------------------GLOBAL CONFIGURATION----------------------
+
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.ddl-auto=update
+
+hibernate.temp.use_jdbc_metadata_defaults=false
+
+#---------------------PERSONAL CONFIGURATION------------------
+
+#Database credentials
+spring.datasource.url=jdbc:postgresql://localhost:5432/parking
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
