--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: java
 jobs:
   include:
     - stage: SonarCloud
-      if: branch=master
+      if: branch=develop
       script: ./gradlew sonarqube
 addons:
   sonarcloud:
