configuring travis to only run on develop branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: java
 
+# safelist
+branches:
+  only:
+    - develop
+
 jobs:
   include:
     - stage: SonarCloud
-      if: branch=master
       script: ./gradlew sonarqube
 addons:
   sonarcloud:
